fix css z-index

--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -4,6 +4,7 @@
 @color-main-one:#062654;
 
 #sticky-side {
+  z-index: 9999;
   position: fixed;
   top: 50%;
   transform: translateY(-50%);
